// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordion /> should render properly with data 1`] = `
.emotion-5 {
  padding-top: 16px;
}

.emotion-4 {
  background-color: #3b3b3b;
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
}

.emotion-3 {
  border-bottom: 1px solid #4a4a4a;
  padding: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-0 {
  font-size: 17px;
  line-height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  padding: 0;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-2:hover {
  color: #73b61c;
}

.emotion-2[aria-disabled=true] {
  color: #808080;
}

.emotion-1 {
  margin-left: 8px;
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-3"
    >
      <h4
        className="emotion-0"
      >
        Hi
      </h4>
      <button
        className="emotion-2"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="emotion-1"
          data-file-name="chevron.svg"
          width={20}
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> should render properly with data 2`] = `
.emotion-6 {
  padding-top: 16px;
}

.emotion-5 {
  background-color: #3b3b3b;
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
}

.emotion-3 {
  border-bottom: 1px solid #4a4a4a;
  padding: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-0 {
  font-size: 17px;
  line-height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  padding: 0;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-2:hover {
  color: #73b61c;
}

.emotion-2[aria-disabled=true] {
  color: #808080;
}

.emotion-1 {
  margin-left: 8px;
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-4 {
  padding: 32px;
  padding-top: 16px;
}

<div
  className="emotion-6"
>
  <div
    className="emotion-5"
  >
    <div
      className="emotion-3"
    >
      <h4
        className="emotion-0"
      >
        Hi
      </h4>
      <button
        className="emotion-2"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="emotion-1"
          data-file-name="chevron.svg"
          width={20}
        />
      </button>
    </div>
    <div
      className="emotion-4"
    >
      Hello
    </div>
  </div>
</div>
`;
